ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  namespace: ns-37
  annotations:
    haproxy.ingress.kubernetes.io/backend-max-connections: "1000"
spec:
  ingressClassName: haproxy
  rules:
  - host: ns-37.a.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
